# ML_PROJECT

./: README.md  app.py  application.py  pyproject.toml  requirements.txt  setup.py
.ebextensions/: python.config
catboost_info/: catboost_training.json  time_left.tsv
catboost_info/learn/: events.out.tfevents
mlproject.egg-info/: SOURCES.txt
notebook/: 1 . EDA STUDENT PERFORMANCE .ipynb  2. MODEL TRAINING.ipynb
src/: exception.py
src/components/: data_ingestion.py  model_trainer.py
templates/: home.html  index.html
